--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
     <nav>
-        
+        <img src="https://ga-dash.s3.amazonaws.com/production/assets/logo-0901a3c8466759400ecb1fd4ce0cfcc115d9a227a8ed64940284762f35a0ff15.png">
+        <p>Dash</p>
+        <p>login with <a href="">Email</a></p>
     </nav>
     <div></div>
     </body>
