--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 </head>
 <body>
     <nav>
-        <div class="tf">
+        <div class="br">
         <img src="https://ga-dash.s3.amazonaws.com/production/assets/logo-0901a3c8466759400ecb1fd4ce0cfcc115d9a227a8ed64940284762f35a0ff15.png">
         <p>Dash</p>
     </div>
-        <p class="tl">login with <a href="">Email</a></p>
+    <div class="login">
+        <p>login with <a href="">Email</a></p>
+    </div>
     </nav>
     <div></div>
     </body>
