--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 </head>
 <body>
     <nav>
-        <div class="br">
-        <img src="">
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+       </nav>
 </div>
     </body>
     </html>
