--- a/index.html
+++ b/index.html
@@ -10,11 +10,22 @@
     <title>Document</title>
 </head>
 <body>
-    <nav>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+    <nav class="container">
+        <div class="row">
+            <div class="col-xl-3">
+        <div class="p"><p>hello</p></div>
+    </div>
+    <div class="col-xl-3">
+        <div class="p"><p>hello</p></div>
+    </div>
+    <div class="col-xl-3">
+        <div class="p"><p>hello</p></div>
+    </div>
+    <div class="col-xl-3">
+        <div class="p"><p>hello</p></div>
+    </div>
+    </div>
+    </div>
        </nav>
 </div>
     </body>
