--- a/index.html
+++ b/index.html
@@ -13,16 +13,16 @@
     <nav class="container">
         <div class="row">
             <div class="col-xl-3">
-        <div class="p"><p>hello</p></div>
+        <div class="p"><p>home</p></div>
     </div>
     <div class="col-xl-3">
-        <div class="p"><p>hello</p></div>
+        <div class="p"><p>About</p></div>
     </div>
     <div class="col-xl-3">
-        <div class="p"><p>hello</p></div>
+        <div class="p"><p>Service</p></div>
     </div>
     <div class="col-xl-3">
-        <div class="p"><p>hello</p></div>
+        <div class="p"><p>Contact</p></div>
     </div>
     </div>
     </div>
