--- a/index.html
+++ b/index.html
@@ -27,8 +27,20 @@
     </div>
     </div>
        </nav>
-<div class="container-2">
+<div class="container">
+    <div class="row">
+        <div class="col-xl-10">
+            <div class="container-2">
  <p>hello</p>
+</div>
+</div>
+<div class="col-xl-2">
+<div class="container-3">
+<p>Membership
+    $199/mo</p>
+</div>
+</div>
+</div>
 </div>
     </body>
     </html>
