--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </div>
 <div class="col-xl-2">
 <div class="container-3">
-<p>Membership
-    $199/mo</p>
+<p>Membership</p>
+ <p>$199/mo</p>
 </div>
 </div>
 </div>
