--- a/index.html
+++ b/index.html
@@ -37,9 +37,15 @@
 <div class="col-xl-2">
 <div class="container-3">
 <p>Membership</p>
- <p>$199/mo</p>
+ <p class="fz">$199/mo</p>
+ <button type="button">buy now</button>
 </div>
-</div>
+<div class="container-3">
+    <p>Membership</p>
+     <p class="fz">$199/mo</p>
+     <button type="button">buy now</button>
+     </div>
+     </div>
 </div>
 </div>
     </body>
