--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <div class="row">
         <div class="col-xl-10">
             <div class="container-2">
- <p>hello</p>
+ <h1>Your Web Presence</h1>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsam! Nihil quo minima nulla atque!</p>
 </div>
 </div>
 <div class="col-xl-2">
