--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
     <div class="row">
         <div class="col-xl-10">
             <div class="container-2">
+                <div class="ab">
  <h1>Your Web Presence</h1>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsam! Nihil quo minima nulla atque!</p>
+<button type="button">learn more</button>
+</div>
 </div>
 </div>
 <div class="col-xl-2">
@@ -46,7 +49,7 @@
      <p class="fz">$199/mo</p>
      <button type="button">buy now</button>
      </div>
-     </div>
+    </div>
 </div>
 </div>
     </body>
