--- a/index.html
+++ b/index.html
@@ -52,5 +52,21 @@
     </div>
 </div>
 </div>
+<div class="container">
+<div class="row">
+<div class="col-xl-3">
+
+</div>
+<div class="col-xl-3">
+
+</div>
+<div class="col-xl-3">
+
+</div>
+<div class="col-xl-3">
+
+</div>
+</div>
+</div>
     </body>
     </html>
