--- a/index.html
+++ b/index.html
@@ -55,16 +55,29 @@
 <div class="container">
 <div class="row">
 <div class="col-xl-3">
-
+    <div class="container-4">
+<i class="fas fa-chart-pie fa-4x"></i>
+<p>Analytics</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+</div>
 </div>
 <div class="col-xl-3">
-
+    <div class="container-4">
+ <p>Marketing</p>
+   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+</div>
 </div>
 <div class="col-xl-3">
-
+    <div class="container-4">
+<p>Development</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+</div>
 </div>
 <div class="col-xl-3">
-
+<div class="container-4">
+    <p>Development</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
+    </div>
 </div>
 </div>
 </div>
