--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 </div>
 <div class="col-xl-3">
     <div class="container-4">
+    <i class="fas fa-globe fa-4x"></i>
  <p>Marketing</p>
    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
 </div>
