--- a/index.html
+++ b/index.html
@@ -70,13 +70,15 @@
 </div>
 <div class="col-xl-3">
     <div class="container-4">
+    <i class="fas fa-cog fa-4x"></i>
 <p>Development</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
 </div>
 </div>
 <div class="col-xl-3">
 <div class="container-4">
-    <p>Development</p>
+    <i class="fas fa-users fa-4x"></i>
+    <p>Support</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quasi, expedita?</p>
     </div>
 </div>
