--- a/index.html
+++ b/index.html
@@ -84,5 +84,15 @@
 </div>
 </div>
 </div>
+<div class="container-5">
+<div class="row">
+<div class="col-xl-6">
+ 
+</div>
+<div class="col-xl-6">
+
+</div>
+</div>
+ </div>
     </body>
     </html>
