--- a/index.html
+++ b/index.html
@@ -96,15 +96,15 @@
 </div>
 </div>
  </div>
- <div class="container">
+ <div class="container-6">
 <img class="pp" src="https://source.unsplash.com/random/200x200">
 <img class="pp" src="https://source.unsplash.com/random/201x200">
-<img class="op" src="https://source.unsplash.com/random/202x200">
-<img src="https://source.unsplash.com/random/203x200">
-<img src="https://source.unsplash.com/random/204x200">
-<img src="https://source.unsplash.com/random/205x200">
-<img src="https://source.unsplash.com/random/206x200">
-<img src="https://source.unsplash.com/random/207x200">
+<img class="pp" src="https://source.unsplash.com/random/202x200">
+<img class="pp" src="https://source.unsplash.com/random/203x200">
+<img class="pp" src="https://source.unsplash.com/random/204x200">
+<img class="pp" src="https://source.unsplash.com/random/205x200">
+<img class="pp" src="https://source.unsplash.com/random/206x200">
+<img class="pp" src="https://source.unsplash.com/random/207x200">
 </div>
     </body>
     </html>
