--- a/index.html
+++ b/index.html
@@ -106,5 +106,8 @@
 <img class="pp" src="https://source.unsplash.com/random/206x200">
 <img class="pp" src="https://source.unsplash.com/random/207x200">
 </div>
+<footer>
+    
+</footer>
     </body>
     </html>
