--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 <img class="pp" src="https://source.unsplash.com/random/207x200">
 </div>
 <footer>
-    
+    <p>GridBiz © 2018</p>
 </footer>
     </body>
     </html>
