--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="ab">
  <h1>Your Web Presence</h1>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi, ipsam! Nihil quo minima nulla atque!</p>
-<button type="button">learn more</button>
+<button class="h" type="button">learn more</button>
 </div>
 </div>
 </div>
@@ -42,12 +42,12 @@
 <div class="container-3">
 <p>Membership</p>
  <p class="fz">$199/mo</p>
- <button type="button">buy now</button>
+ <button class="h" type="button">buy now</button>
 </div>
 <div class="container-3">
     <p>Membership</p>
      <p class="fz">$199/mo</p>
-     <button type="button">buy now</button>
+     <button class="h" type="button">buy now</button>
      </div>
     </div>
 </div>
@@ -92,7 +92,7 @@
 <div class="col-xl-6">
 <p>Your Business On The Web</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae alias reiciendis deleniti possimus nemo non repellendus? Quae atque vero modi quidem! Autem cupiditate fugit doloribus ad amet, asperiores provident commodi.</p>
-<button type="button">learn more</button>
+<button class="h" type="button">learn more</button>
 </div>
 </div>
  </div>
